--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 2MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/board
@@ -16,3 +19,7 @@ spring:
 
 server:
   port: 9090
+
+
+file:
+  upload-dir: /uploads
