스프링 시큐리티 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,9 @@ server:
 
 file:
   upload-dir: src/main/resources/static/uploads
+
+logging:
+  level:
+    org:
+      springframework:
+        security : DEBUG
